--- a/application/config/form/ircategory.form
+++ b/application/config/form/ircategory.form
@@ -17,6 +17,7 @@ displayGroups.ircategory.elements.category = "category"
 
 elements.name.type = "text"
 elements.name.options.label = "Name"
+elements.name.options.size = "65"
 elements.name.options.validators.alnum.validator = "NotEmpty"
 elements.name.options.required = true
 displayGroups.ircategory.elements.name = "name"
