--- a/application/views/scripts/incident/dashboard.phtml
+++ b/application/views/scripts/incident/dashboard.phtml
@@ -8,6 +8,8 @@ var myColumnDefs = [
     {key:"id", label:"Incident ID", hidden: false}
     ,{key:"additionalInfo", label:"Additional Info", hidden: false}
     ,{key:"status", label:"status", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false}
+    ,{key:"category", label:"Category", hidden: false}
     ,{key:"reportTs", label:"Reported", hidden: false}
 ];
 
@@ -92,6 +94,8 @@ var myColumnDefs = [
     {key:"id", label:"Incident ID", hidden: false}
     ,{key:"additionalInfo", label:"Additional Info", hidden: false}
     ,{key:"status", label:"status", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false}
+    ,{key:"category", label:"Category", hidden: false}
     ,{key:"reportTs", label:"Reported", hidden: false}
 ];
 
@@ -176,6 +180,8 @@ var myColumnDefs = [
     {key:"id", label:"Incident ID", hidden: false}
     ,{key:"additionalInfo", label:"Additional Info", hidden: false}
     ,{key:"status", label:"status", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false}
+    ,{key:"category", label:"Category", hidden: false}
     ,{key:"reportTs", label:"Reported", hidden: false}
 ];
 
@@ -259,6 +265,8 @@ var myColumnDefs = [
     {key:"id", label:"Incident ID", hidden: false}
     ,{key:"additionalInfo", label:"Additional Info", hidden: false}
     ,{key:"status", label:"status", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false}
+    ,{key:"category", label:"Category", hidden: false}
     ,{key:"reportTs", label:"Reported", hidden: false}
 ];
 
