Feature request on the IR branch: OFJ-3 Incident Reporting Module
variouls loose ends have been taken care of; anonymous report page is set up; very basic search is set up;

--- a/application/config/form/incident.form
+++ b/application/config/form/incident.form
@@ -184,12 +184,13 @@ elements.piiPoliceReport.options.label="Was a police report filed"
 displayGroups.pii.elements.piiPoliceReport="piiPoliceReport"
 
 elements.piiIndividualsCount.type="text"
-elements.piiIndividualsCount.options.label="Home many individuals were affected"
+elements.piiIndividualsCount.options.label="How many individuals were effected"
 elements.piiIndividualsCount.options.style="width:100px"
+elements.piiIndividualsCount.options.validators.alnum.validator = "Digits"
 displayGroups.pii.elements.piiIndividualsCount="piiIndividualsCount"
 
 elements.piiIndividualsNotification.type="select"
-elements.piiIndividualsNotification.options.label="Were affected individuals contacted"
+elements.piiIndividualsNotification.options.label="Were effected individuals contacted"
 displayGroups.pii.elements.piiIndividualsNotification="piiIndividualsNotification"
 
 elements.piiShipment.type="select"
