--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -23,6 +23,7 @@
             <?php if (!Fisma::debug()) {echo ' autocomplete="off" ';} ?>
             value="<?php echo isset($this->password)?$this->password:'';?>" ></td></tr>
             <tr><td>&nbsp;</td><td><?php echo new Fisma_Yui_Form_Button_Submit('loginButton', array('label' => 'Log In')); ?></td>
+            <tr><td>&nbsp;</td><td nowrap><br /><a href="/incident/anonreport">Report Security Incident</a></td></tr> 
         </table>
     </form>
 </div>
