--- a/application/views/scripts/incident/dashboard.phtml
+++ b/application/views/scripts/incident/dashboard.phtml
@@ -1,29 +1,31 @@
 <?php Fisma_Format_Section::startSection("New Incidents: <span id='newSearchResultsTotalFound'></span>"); ?>
-
 <div id="newList"></div>
 <script type="text/javascript">
 // Column definitions
 var myColumnDefs = [
-    {key:"id", label:"Incident ID", hidden: false}
-    ,{key:"additionalInfo", label:"Additional Info", hidden: false}
+    {key:"id", label:"Incident ID", hidden: false, sortable: true}
+    ,{key:"additionalInfo", label:"Additional Info", hidden: false, sortable: true}
     ,{key:"status", label:"status", hidden: false}
-    ,{key:"piiInvolved", label:"PII", hidden: false}
-    ,{key:"category", label:"Category", hidden: false}
-    ,{key:"reportTs", label:"Reported", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false, sortable: true}
+    ,{key:"category", label:"Category", hidden: false, sortable: true}
+    ,{key:"reportTs", label:"Reported", hidden: false, sortable: true}
 ];
 
     // A function which builds the query string
     var myRequestBuilder = function(oState, oSelf) {
         // Get states or use defaults
         oState = oState || {pagination:null, sortedBy:null};
-        var sort = (oState.sortedBy) ? oState.sortedBy.key : "id";
+        var sort = (oState.sortedBy) ? oState.sortedBy.key : "reportTs";
         var dir = (oState.sortedBy && oState.sortedBy.dir == 'yui-dt-asc') ? "asc" : "desc";
         var startIndex = oState.pagination.recordOffset;
         var count = oState.pagination.rowsPerPage;
-    
+   
+        sort = (sort=='category') ? 'classification' : sort;
+ 
         // Build custom request
         var request = "<?php echo $this->link; ?>" + 
-                      "/sortby/" + status +
+                      "/sortby/" + sort +
+                      "/status/new" +
                       "/order/" + dir +
                       "/startIndex/" + startIndex +
                       "/count/" + count;
@@ -87,12 +89,12 @@ var myColumnDefs = [
 <script type="text/javascript">
 // Column definitions
 var myColumnDefs = [
-    {key:"id", label:"Incident ID", hidden: false}
-    ,{key:"additionalInfo", label:"Additional Info", hidden: false}
+    {key:"id", label:"Incident ID", hidden: false, sortable: true}
+    ,{key:"additionalInfo", label:"Additional Info", hidden: false, sortable: true}
     ,{key:"status", label:"status", hidden: false}
-    ,{key:"piiInvolved", label:"PII", hidden: false}
-    ,{key:"category", label:"Category", hidden: false}
-    ,{key:"reportTs", label:"Reported", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false, sortable: true}
+    ,{key:"category", label:"Category", hidden: false, sortable: true}
+    ,{key:"reportTs", label:"Reported", hidden: false, sortable: true}
 ];
 
     // A function which builds the query string
@@ -104,12 +106,16 @@ var myColumnDefs = [
         var startIndex = oState.pagination.recordOffset;
         var count = oState.pagination.rowsPerPage;
     
+        sort = (sort=='category') ? 'classification' : sort;
+ 
         // Build custom request
         var request = "<?php echo $this->link; ?>" + 
-                      "/sortby/" + status +
+                      "/sortby/" + sort +
+                      "/status/open" +
                       "/order/" + dir +
                       "/startIndex/" + startIndex +
                       "/count/" + count;
+        
         return request;
     };
 
@@ -169,12 +175,12 @@ var myColumnDefs = [
 <script type="text/javascript">
 // Column definitions
 var myColumnDefs = [
-    {key:"id", label:"Incident ID", hidden: false}
-    ,{key:"additionalInfo", label:"Additional Info", hidden: false}
+    {key:"id", label:"Incident ID", hidden: false, sortable: true}
+    ,{key:"additionalInfo", label:"Additional Info", hidden: false, sortable: true}
     ,{key:"status", label:"status", hidden: false}
-    ,{key:"piiInvolved", label:"PII", hidden: false}
-    ,{key:"category", label:"Category", hidden: false}
-    ,{key:"reportTs", label:"Reported", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false, sortable: true}
+    ,{key:"category", label:"Category", hidden: false, sortable: true}
+    ,{key:"reportTs", label:"Reported", hidden: false, sortable: true}
 ];
 
     // A function which builds the query string
@@ -186,12 +192,16 @@ var myColumnDefs = [
         var startIndex = oState.pagination.recordOffset;
         var count = oState.pagination.rowsPerPage;
     
+        sort = (sort=='category') ? 'classification' : sort;
+ 
         // Build custom request
         var request = "<?php echo $this->link; ?>" + 
-                      "/sortby/" + status +
+                      "/sortby/" + sort +
+                      "/status/resolved" +
                       "/order/" + dir +
                       "/startIndex/" + startIndex +
                       "/count/" + count;
+        
         return request;
     };
 
@@ -251,12 +261,12 @@ var myColumnDefs = [
 <script type="text/javascript">
 // Column definitions
 var myColumnDefs = [
-    {key:"id", label:"Incident ID", hidden: false}
-    ,{key:"additionalInfo", label:"Additional Info", hidden: false}
+    {key:"id", label:"Incident ID", hidden: false, sortable: true}
+    ,{key:"additionalInfo", label:"Additional Info", hidden: false, sortable: true}
     ,{key:"status", label:"status", hidden: false}
-    ,{key:"piiInvolved", label:"PII", hidden: false}
-    ,{key:"category", label:"Category", hidden: false}
-    ,{key:"reportTs", label:"Reported", hidden: false}
+    ,{key:"piiInvolved", label:"PII", hidden: false, sortable: true}
+    ,{key:"category", label:"Category", hidden: false, sortable: true}
+    ,{key:"reportTs", label:"Reported", hidden: false, sortable: true}
 ];
 
     // A function which builds the query string
@@ -268,12 +278,16 @@ var myColumnDefs = [
         var startIndex = oState.pagination.recordOffset;
         var count = oState.pagination.rowsPerPage;
     
+        sort = (sort=='category') ? 'classification' : sort;
+ 
         // Build custom request
         var request = "<?php echo $this->link; ?>" + 
-                      "/sortby/" + status +
+                      "/sortby/" + sort +
+                      "/status/closed" +
                       "/order/" + dir +
                       "/startIndex/" + startIndex +
                       "/count/" + count;
+        
         return request;
     };
 
@@ -349,6 +363,46 @@ var transaction = YAHOO.util.Connect.asyncRequest('GET', '/incident/commentdashb
 <?php Fisma_Format_Section::stopSection(); ?>
 
 <?php Fisma_Format_Section::startSection("Stats"); ?>
+
+<div style="float: right;">
+    <embed scale="noscale"
+           salign="TL"
+           bgcolor="#ffffff"
+           wmode="opaque"
+           src="/flash/charts.swf"
+           flashvars="library_path=/flash/charts_library&amp;xml_source=/incident/totalstatus/format/xml"
+           name="my_chart"
+           menu="true"
+           allowfullscreen="true"
+           allowscriptaccess="sameDomain"
+           quality="high"
+           pluginspage="http://www.macromedia.com/go/getflashplayer"
+           play="true"
+           devicefont="false"
+           type="application/x-shockwave-flash"
+           width="350"
+           height="200"
+           align="middle">
+
+    <embed scale="noscale"
+           salign="TL"
+           bgcolor="#ffffff"
+           wmode="opaque"
+           src="/flash/charts.swf"
+           flashvars="library_path=/flash/charts_library&amp;xml_source=/incident/totalcategory/format/xml"
+           name="my_chart"
+           menu="true"
+           allowfullscreen="true"
+           allowscriptaccess="sameDomain"
+           quality="high"
+           pluginspage="http://www.macromedia.com/go/getflashplayer"
+           play="true"
+           devicefont="false"
+           type="application/x-shockwave-flash"
+           width="350"
+           height="200"
+           align="middle">
+</div>
 
 <div id="reportData">Loading...</div>
 
