Improvement on the performance branch: OFJ-110 Minify/Combine JS/CSS Fix typo, two instances of CheckboxTree, editable was missing

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -44,7 +44,7 @@
         "editableJS" => array(
             "name" => 'editableJS',
             "type" => 'js',
-            "fullpath" => '/javascripts/CheckboxTree.js',
+            "fullpath" => '/javascripts/editable.js',
             "global" => true,
             "requires" => array (0 => 'checkboxtree')
         ),
