Improvement on the performance branch: OFJ-111 Version control JS and CSS, and set far-future expiration dates Created a helper, InjectAsset, to clean up management of JS and CSS assets, and more easily manage injections for debug modes and combined files. Also injects version numbers into assets if not in debug mode.

--- a/application/layouts/scripts/install.phtml
+++ b/application/layouts/scripts/install.phtml
@@ -1,20 +1,12 @@
 <?php
     echo $this->doctype();
-
-    // Check for debug status, and set the JS/CSS postfix appropriately
-    if(Fisma::debug()) {
-        $postfix = "";
-    }
-    else {
-        $postfix = "-min. " . Fisma::version();
-    }
 ?>
 <html>
 <head>
   <title>OpenFISMA Custom Installation</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <? echo $this->headScript()->appendFile("/javascripts/fisma$postfix.js"); ?>
-  <? echo $this->headScript()->appendStylesheet("/stylesheets/install$postfix.css"); ?>
+  <? $this->injectAsset("/javascripts/fisma.js",'js',false); ?>
+  <? $this->injectAsset("/stylesheets/install.css",'css',false); ?>
   <link rel="icon"
         type="image/ico"
         href="/images/favicon.ico" />
