Feature request on the IR branch: OFJ-3 Incident Reporting Module
Nathan's final checking

--- a/application/config/form/irworkflow.form
+++ b/application/config/form/irworkflow.form
@@ -15,6 +15,7 @@ elements.name.type = "text"
 elements.name.options.label = "Name"
 elements.name.options.validators.alnum.validator = "NotEmpty"
 elements.name.options.required = true
+elements.name.options.size = "50"
 displayGroups.irworkflow.elements.name = "name"
 
 elements.description.type = "textarea"
