--- a/application/layouts/scripts/install.phtml
+++ b/application/layouts/scripts/install.phtml
@@ -5,8 +5,8 @@
 <head>
   <title>OpenFISMA Custom Installation</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <? $this->injectAsset("/javascripts/fisma.js", 'js', false); ?>
-  <? $this->injectAsset("/stylesheets/install.css", 'css', false); ?>
+  <script type="text/javascript" src="/javascripts/fisma.js"></script>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/install.css" />
   <link rel="icon"
         type="image/ico"
         href="/images/favicon.ico" />
