--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -17,18 +17,17 @@
     <form id='loginForm' method="post" action="/auth/login">
         <table>
             <tr><td>Username:</td><td><input type="text" name="username" 
-            <?php if (!Fisma::debug()) {echo ' autocomplete="off" ';} ?>
-            value="<?php echo isset($this->username)?$this->username:'';?>" ></td></tr>
-            <tr><td>Password:</td><td><input type="password" name="userpass" autocomplete="off"
-            <?php if (!Fisma::debug()) {echo ' autocomplete="off" ';} ?>
-            value="<?php echo isset($this->password)?$this->password:'';?>" ></td></tr>
-            <tr><td>&nbsp;</td><td><?php echo new Fisma_Yui_Form_Button_Submit('loginButton', array('label' => 'Log In')); ?></td>
-            <tr><td>&nbsp;</td><td nowrap><br /><a href="/incident/anonreport">Report Security Incident</a></td></tr> 
+            <?php if (!Fisma::debug()) {echo ' autocomplete="off" ';} ?>></td></tr>
+            <tr><td>Password:</td><td><input type="password" name="userpass"
+            <?php if (!Fisma::debug()) {echo ' autocomplete="off" ';} ?>></td></tr>
+            <tr>
+                <td>&nbsp;</td>
+                <td><?php echo new Fisma_Yui_Form_Button_Submit('loginButton', array('label' => 'Log In')); ?></td>
+            </tr>
+            <tr>
+                <td>&nbsp;</td>
+                <td nowrap><br /><a href="/incident/report">Report Security Incident</a></td>
+            </tr> 
         </table>
     </form>
 </div>
-
-
-
-
-
