--- a/application/views/scripts/incident/incidentdata.phtml
+++ b/application/views/scripts/incident/incidentdata.phtml
@@ -14,8 +14,8 @@
         <td><?php print $this->incident->id; ?></td>
     </tr>
     <tr>
-        <td>Classification:</td>
-        <td><?php print @$this->incident->Classification->name; ?></td>
+        <td>Category:</td>
+        <td><?php print @$this->incident->Category->name; ?></td>
     </tr>
     <tr>
         <td>Description:</td>
