--- a/application/config/form/incident3Host.form
+++ b/application/config/form/incident3Host.form
@@ -12,7 +12,7 @@
 
 elements.instructions.type = "Element_ConstantText"
 elements.instructions.options.label = "Instructions"
-elements.instructions.options.value = "<p>If this incident involves a computer workstation, server, or other computer asset, please describe that asset as fully as possible on this page.</p>"
+elements.instructions.options.value = "<p>If this incident involves a computer workstation, server, or other computer asset, please describe that asset as fully as possible on this page.</p><p>This section is <i>optional.</i></p>"
 displayGroups.help.elements.instructions = "instructions"
 
 elements.hostName.type="text"
