Feature request on the IR branch: OFJ-3 Incident Reporting Module
Cleaning up all of the email templates for IR.

I'm also adding a view helper which constructs a self-referencing URI for openfisma. Hopefully this fixes all of the issues we've had in the past trying to do this.

--- a/application/views/scripts/mail/sendpassword.phtml
+++ b/application/views/scripts/mail/sendpassword.phtml
@@ -4,4 +4,4 @@ You password for <?php echo Configuration::getConfig('system_name');?> has been 
 
 Temporary Password: <?php echo "{$this->user->password}\n";?>
 
-<?php echo $this->host;?>
+<?php echo $this->baseUri(); ?>
