--- a/application/views/scripts/mail/validate.phtml
+++ b/application/views/scripts/mail/validate.phtml
@@ -2,4 +2,4 @@ This is an automatically generated message, please do not reply to this address.
 
 You recently changed your e-mail address for <?php echo Configuration::getConfig('system_name');?>.
 
-Please click here to confirm this e-mail address: <?php echo $this->host;?>/auth/emailvalidate/id/<?php echo $this->user->id;?>/code/<?php echo $this->validateCode;?>
+Please click here to confirm this e-mail address: <?php echo $this->baseUri(); ?>/auth/emailvalidate/id/<?php echo $this->user->id;?>/code/<?php echo $this->validateCode;?>
