--- a/application/views/scripts/mail/sendaccountinfo.phtml
+++ b/application/views/scripts/mail/sendaccountinfo.phtml
@@ -9,4 +9,4 @@ Password: <Same as your network password>
 Temporary Password: <?php echo "{$this->user->password}\n"; ?>
 <?php endif; ?>
 
-Please click here to login:  http://<?php echo $this->host; ?>/auth/login
+Please click here to login: <?php echo $this->baseUri(); ?>/auth/login
